local/minikube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shodobot-backend-service
  labels:
    app: shodobot-backend
spec:
  selector:
    app: shodobot-backend
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
  type: ClusterIP
