local/minikube/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shodobot-frontend-service
  labels:
    app: shodobot-frontend
spec:
  selector:
    app: shodobot-frontend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer  # Pour exposer le service sur minikube
